# transportschedule

./: Procfile  alembic.ini  alembic_.ini  app.json  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: dokku.yml
alembic/: env.py
alembic/versions/: ac50cac2bc77_.py
migration/: env.py
migration/versions/: 21ebc0162091_.py  8434093fb044_.py  cb6a9f1a0f91_.py
migrations/: env.py
migrations_/: env.py
transportschedule/: constants.py  engine.py
transportschedule/schedule/: encode.py
transportschedule/schedule/database/: connect.py  tables.py
transportschedule/schedule/json_parse/: json_parser.py
transportschedule/schedule/logging/: log.py
transportschedule/schedule/process/: processing.py
transportschedule/schedule/request/: httprequest.py  request.py
transportschedule/schedule/telegram/: commands.py  config.py  keyboard.py  routes.json
transportschedule/schedule/telegram/webhooks/: webhooks.py
transportschedule/schedule/tests/: test_api_yandex.py  test_json_parse.py
transportschedule/schedule/tests/test_data/: request.json
