[tool.poetry]
name = "transportschedule"
version = "0.1.0"
description = ""
authors = ["TurtleOld <dev@pavlovteam.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.15.3"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.2"
loguru = "^0.7.2"
httpx = {extras = ["http2"], version = "^0.26.0"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^24.1.1"
icecream = "^2.1.3"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
transport = "transportschedule.engine:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"