[tool.poetry]
name = "transportschedule"
version = "0.1.0"
description = ""
authors = ["TurtleOld <dev@pavlovteam.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytelegrambotapi = "^4.15.3"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.2"
loguru = "^0.7.2"
httpx = {extras = ["http2"], version = "^0.26.0"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^24.3.0"
icecream = "^2.1.3"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
transport = "transportschedule.engine:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"